--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
 </head>
 
 <body>
-    <h1>jsQR Demo</h1>
-    <a id="githubLink" href="https://github.com/cozmo/jsQR">View documentation on Github</a>
-    <p>Pure JavaScript QR code decoding library.</p>
-    <div id="loadingMessage">🎥 Unable to access video stream (please make sure you have a webcam enabled)</div>
+    <h1>QRコードリーダー サンプル</h1>
+    <div id="loadingMessage">（！）カメラにアクセスできません</div>
     <canvas id="canvas" hidden></canvas>
     <div id="output" hidden>
-        <div id="outputMessage">No QR code detected.</div>
+        <div id="outputMessage">QRコードが見つかりません。</div>
         <div hidden><b>Data:</b> <span id="outputData"></span></div>
     </div>
+    <input type="text" id="qr_text" style="width: 100%; font-size: 18px; padding: 5px; margin-top: 10px;">
     <script>
-        var video = document.createElement("video");
-        var canvasElement = document.getElementById("canvas");
-        var canvas = canvasElement.getContext("2d");
-        var loadingMessage = document.getElementById("loadingMessage");
-        var outputContainer = document.getElementById("output");
-        var outputMessage = document.getElementById("outputMessage");
-        var outputData = document.getElementById("outputData");
+        let video = document.createElement("video");
+        let canvasElement = document.getElementById("canvas");
+        let canvas = canvasElement.getContext("2d");
+        let loadingMessage = document.getElementById("loadingMessage");
+        let outputContainer = document.getElementById("output");
+        let outputMessage = document.getElementById("outputMessage");
+        let outputData = document.getElementById("outputData");
+        let textbox = document.getElementById("qr_text");
 
         function drawLine(begin, end, color) {
             canvas.beginPath();
@@ -91,7 +91,7 @@
         });
 
         function tick() {
-            loadingMessage.innerText = "⌛ Loading video..."
+            loadingMessage.innerText = "カメラの映像を読み込んでいます…"
             if (video.readyState === video.HAVE_ENOUGH_DATA) {
                 loadingMessage.hidden = true;
                 canvasElement.hidden = false;
@@ -100,8 +100,8 @@
                 canvasElement.height = video.videoHeight;
                 canvasElement.width = video.videoWidth;
                 canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
-                var imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
-                var code = jsQR(imageData.data, imageData.width, imageData.height, {
+                let imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
+                let code = jsQR(imageData.data, imageData.width, imageData.height, {
                     inversionAttempts: "dontInvert",
                 });
                 if (code) {
@@ -112,9 +112,10 @@
                     outputMessage.hidden = true;
                     outputData.parentElement.hidden = false;
                     outputData.innerText = code.data;
+                    qr_text.value = code.data;
                 } else {
                     outputMessage.hidden = false;
-                    outputData.parentElement.hidden = true;
+                    textbox.parentElement.hidden = true;
                 }
             }
             requestAnimationFrame(tick);
