--- a/index.html
+++ b/index.html
@@ -1,24 +1,14 @@
 <html>
-
 <head>
     <meta charset="utf-8">
-    <title>jsQR Demo</title>
+    <title>QRコード読み取り サンプル</title>
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
     <style>
         body {
-            font-family: 'Ropa Sans', sans-serif;
             color: #333;
             max-width: 640px;
             margin: 0 auto;
             position: relative;
-        }
-
-        #githubLink {
-            position: absolute;
-            right: 0;
-            top: 12px;
-            color: #2D99FF;
         }
 
         h1 {
@@ -122,5 +112,4 @@
         }
     </script>
 </body>
-
 </html>
