--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <title>QRコード読み取り サンプル</title>
-    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
     <style>
         body {
             color: #333;
@@ -32,63 +32,8 @@
     <form action="">
         <input type="text" id="qr_text" placeholder="QRコードの情報が表示されます">
     </form>
-    <script>
-        let video = document.createElement("video");
-        let canvasElement = document.getElementById("canvas");
-        let canvas = canvasElement.getContext("2d");
-        let loadingMessage = document.getElementById("loadingMessage");
-        let outputContainer = document.getElementById("output");
-        let outputMessage = document.getElementById("outputMessage");
-        let outputData = document.getElementById("outputData");
-        let textbox = document.getElementById("qr_text");
 
-        function drawLine(begin, end, color) {
-            canvas.beginPath();
-            canvas.moveTo(begin.x, begin.y);
-            canvas.lineTo(end.x, end.y);
-            canvas.lineWidth = 4;
-            canvas.strokeStyle = color;
-            canvas.stroke();
-        }
-
-        // Use facingMode: environment to attemt to get the front camera on phones
-        navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } }).then(function (stream) {
-            video.srcObject = stream;
-            video.setAttribute("playsinline", true); // required to tell iOS safari we don't want fullscreen
-            video.play();
-            requestAnimationFrame(tick);
-        });
-
-        function tick() {
-            loadingMessage.innerText = "カメラの映像を読み込んでいます…"
-            if (video.readyState === video.HAVE_ENOUGH_DATA) {
-                loadingMessage.hidden = true;
-                canvasElement.hidden = false;
-                outputContainer.hidden = false;
-
-                canvasElement.height = video.videoHeight;
-                canvasElement.width = video.videoWidth;
-                canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
-                let imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
-                let code = jsQR(imageData.data, imageData.width, imageData.height, {
-                    inversionAttempts: "dontInvert",
-                });
-                if (code) {
-                    drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
-                    drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#FF3B58");
-                    drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#FF3B58");
-                    drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#FF3B58");
-                    outputMessage.hidden = true;
-                    outputData.parentElement.hidden = false;
-                    outputData.innerText = code.data;
-                    textbox.value = code.data;
-                } else {
-                    outputMessage.hidden = false;
-                    outputData.parentElement.hidden = true;
-                }
-            }
-            requestAnimationFrame(tick);
-        }
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
+    <script src="qr_reader.js"></script>
 </body>
 </html>
